    * TASK #68: add signal slot for checking products before adding them to cart
    * TASK #76: realurl improvements
    * TASK #74: show vat in cart summary and mails
    * TASK #77: add signal slot to change order item before saving
    * TASK #78: use testing framework instead of typo3 source

2.4.3
    2017-02-18
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #71: fix travis configuration

2.4.2
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #70: special price condition fails in some cases

2.4.1
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #69: validation error on special prices without a title

2.4.0
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #62: make mail subject configurable

2.3.2
    2017-01-25
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #67: save comment in order item

2.3.1
    2017-01-23
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #65: save configured currency sign to order item

2.3.0
    2017-01-21
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #57: add ability of backend sorting for products

2.2.0
    2017-01-19
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #61: special price needs a title

2.1.0
    2017-01-19
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #60: parent relation from addresses, payment and shipping to order

2.0.0
    2016-12-21
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #30: make extension compatibile to TYPO3 v8
    * TASK #39: add stock handling for products and backend variants

1.8.5
    2016-12-16
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #55: documentation how to add service attribute calculation

1.8.4
    2016-12-10
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #54: wrong special price calculation for variants if first special price is related to a frontend user group

1.8.3
    2016-12-10
    Daniel Lorenz <daniel.lorenz@extco.de>
