@@ -11,6 +11,7 @@
     * TASK #74: show vat in cart summary and mails
     * TASK #77: add signal slot to change order item before saving
     * TASK #78: use testing framework instead of typo3 source
+    * TASK #79: add signal slot before and after handle payment
 
 2.4.3
     2017-02-18
